🐛 Fix horizontal safari scrollbar size
See #4080

--- a/src/octoprint/static/less/octoprint.less
+++ b/src/octoprint/static/less/octoprint.less
@@ -1346,10 +1346,11 @@ _:future,
 .safari {
   ::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
   }
   ::-webkit-scrollbar-track {
-    border-radius: 8px;
-    -webkit-border-radius: 8px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
   }
   ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
